--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "testsolbot",
+  "name": "tesjsolbot",
   "version": "1.0.0",
   "description": "node.js test assignment for Unilime",
-  "homepage": "https://github.com/Karavang/testSolBot#readme",
+  "homepage": "https://github.com/Karavang/tesjsolBot",
   "bugs": {
-    "url": "https://github.com/Karavang/testSolBot/issues"
+    "url": "https://github.com/Karavang/tesjsolBot/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Karavang/testSolBot.git"
+    "url": "git+https://github.com/Karavang/tesjsolBot.git"
   },
   "license": "ISC",
   "author": "Karavang",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "dependencies": {
     "@solana/web3.js": "^1.98.0",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
     "mongoose": "^8.12.1",
     "node-telegram-bot-api": "^0.66.0",
     "nodemon": "^3.1.9"
